--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Gamja Flower', cursive;
+
   }
   
   body {
@@ -30,7 +32,6 @@
   }
   
   #show-text {
-    font-family: 'Gamja Flower', cursive;
     font-size: 30px;
   }
   
@@ -49,7 +50,6 @@
     font-size: 30px;
     text-align: center;
     background-color: #fff;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
   
   .contents {
@@ -98,6 +98,7 @@
   .time {
     text-align: center;
     position: absolute;
+    font-size: 25px;
     right: 4px;
   }
   
@@ -118,7 +119,6 @@
   .esc-txt {
     color: #000;
     font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif;
   }
   
   
