--- a/style.css
+++ b/style.css
@@ -1,129 +1,148 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Gamja Flower', cursive;
+  margin: 0;
+  padding: 0;
+  font-family: 'Gamja Flower', cursive;
+  font-size: 16px;
+}
 
-  }
-  
-  body {
-    width: 100%;
-  }
-  
-  input:focus {
-    outline: 2px solid #e6d0d0
-  }
-  
-  #context {
-    width: 100%;
-  }
-  
-  #container {
-    background-color: rgb(228, 220, 216);
-    position: relative;
-    width: 700px;
-    height: 590px;
-    margin: 20px auto;
-  }
-  
-  .score {
-    width: 80px;
-    height: 20px;
-    margin-left: 10px;
-  }
-  
-  #show-text {
-    font-size: 30px;
-  }
-  
-  .tit {
-    background-color: #808080;
-    color: #fff;
-    text-align: center;
-    border-bottom: 1px solid #a3a2a2;
-  
-  }
-  
-  .ctx {
-    width: 71px;
-    height: 40px;
-    padding: 5px;
-    font-size: 30px;
-    text-align: center;
-    background-color: #fff;
-  }
-  
-  .contents {
-    background-color: rgb(226, 226, 226);
-    position: relative;
-    top: 20px;
-    width: 500px;
-    height: 450px;
-    margin: auto;
-    border: 3px solid rgb(190, 189, 189);
-    border-radius: 5px;
-  }
-  
-  #input-typing {
-    width: 250px;
-    height: 25px;
-    margin-top: 32px;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    border: 2px solid #b3b2b2;
-    border-radius: 4px;
-  }
-  
-  .all-title {
-    text-align: center;
-    font-size: 30px;
-    font-weight: bolder;
-    color: #2e2929;
-  
-  }
-  
-  .title {
-    text-align: center;
-    /* font-size: 30px; */
-    font-weight: bolder;
-    color: #2e2929;
-  }
-  
-  #input-string {
-    font-size: 25px;
-    color: rgb(118, 180, 25)
-  }
-  
-  
-  .time {
-    text-align: center;
-    position: absolute;
-    font-size: 25px;
-    right: 4px;
-  }
-  
-  .timers {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 85px;
-    height: 50px;
-    border: 1px solid #a7a5a5;
-    background: #fff;
-  }
-  
-  h1 {
-    font-size: 45px;
-  }
-  
-  .esc-txt {
-    color: #000;
-    font-size: 18px;
-  }
-  
-  
-  
-  
-  #st {
-    color: #008000;
-  }
+
+body {
+  width: 100%;
+}
+
+
+input:focus {
+  outline: 2px solid #e6d0d0
+}
+
+
+#container {
+  background-color: rgb(228, 220, 216);
+  position: relative;
+  width: 700px;
+  height: 590px;
+  margin: 20px auto;
+}
+
+.score {
+  width: 80px;
+  height: 20px;
+  margin-left: 10px;
+}
+#context {
+  /* width: 100%; */
+  position: relative;
+}
+#show-text {
+  /* margin-top: 50%; */
+  position: absolute;
+  top: 38%;
+  left: 50%;
+  transform: translateX(-50%);
+  font-family: 'NEXON Lv1 Gothic OTF Light';
+  font-size: 30px;
+}
+
+strong {
+  font-family: 'NEXON Lv1 Gothic OTF Light';
+  font-size: 30px;
+}
+
+.tit {
+  background-color: #808080;
+  color: #fff;
+  text-align: center;
+  border-bottom: 1px solid #a3a2a2;
+
+}
+
+.ctx {
+  width: 71px;
+  height: 40px;
+  padding: 5px;
+  font-size: 30px;
+  text-align: center;
+  background-color: #fff;
+}
+
+.contents {
+  background-color: rgb(226, 226, 226);
+  position: relative;
+  top: 20px;
+  width: 500px;
+  height: 450px;
+  margin: auto;
+  border: 3px solid rgb(190, 189, 189);
+  border-radius: 5px;
+}
+
+#input-typing {
+  width: 250px;
+  height: 30px;
+  margin-top: 23px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  border: 2px solid #b3b2b2;
+  border-radius: 4px;
+  font-family: 'NEXON Lv1 Gothic OTF Light';
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.all-title {
+  position: relative;
+  top: 20px;
+  text-align: center;
+  font-weight: bolder;
+  color: #2e2929;
+}
+
+.title {
+  text-align: center;
+  font-weight: bolder;
+  color: #2e2929;
+}
+
+#input-string {
+  font-size: 25px;
+  color: rgb(118, 180, 25)
+}
+
+
+.time {
+  text-align: center;
+  position: absolute;
+  font-weight: bolder;
+  font-size: 20px;
+  right: 4px;
+}
+
+.timers {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 85px;
+  height: 30px;
+  border: 1px solid #a7a5a5;
+  background: #fff;
+}
+
+.remaining {
+  font-size: 30px;
+}
+h1 {
+  font-size: 45px;
+}
+
+.esc-txt {
+  color: #000;
+  font-size: 25px;
+}
+
+
+
+
+#st {
+  color: #008000;
+}
